<resources>
    <string name="app_name">Forecast</string>

    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="pref_general">General</string>
    <string name="forecast_days">Number of days</string>
    <string name="add_location">Add Location</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="select_location">Select Location</string>
    <string name="delete_curr_location">Delete Current Location</string>
    <string name="set_locations">Locations</string>
    <string name="set_current_location">Current location</string>
    <string name="delete">Delete</string>
    <string name="set_forecast">Forecast</string>
    <string name="set_number_of_days_dialog">Set forecast period</string>
    <string name="set_number_of_days_summary">The number of days to fetch forecast</string>

    <string-array name="set_units">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string name="set_units_default">Metric</string>
    <string name="set_units_title">Units</string>

    <string-array name="set_units_metric">
        <item>km/h</item>
        <item>m/s</item>
    </string-array>

    <string name="set_units_metric_default">km/h</string>

    <string-array name="set_units_imperial">
        <item>mph</item>
        <item>fps</item>
    </string-array>

    <string name="set_units_imperial_default">mph</string>
    <string name="set_units_units">Wind speed</string>
    <string name="reload_all">Reload all</string>
    <string name="share">Share</string>
    <string name="title_activity_day_forecast">Hourly</string>
    <string name="hello_world">Hello world!</string>


</resources>
