<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/select_location"
        android:orderInCategory="10"
        android:title="@string/select_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_location"
        android:orderInCategory="20"
        android:title="@string/add_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_curr_location"
        android:orderInCategory="30"
        android:title="@string/delete_curr_location"
        app:showAsAction="never" />


    <!--<item
        android:id="@+id/action_reload"
        android:icon="@mipmap/ic_reload"
        android:orderInCategory="100"
        android:title="@string/action_reload"
        app:showAsAction="always" />-->
    <item
        android:id="@+id/reload_all"
        android:orderInCategory="50"
        android:icon="@drawable/ic_reload"
        android:title="@string/reload_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share"
        android:orderInCategory="50"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="never"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
